--- a/pixelegg/less/layout_raster.less
+++ b/pixelegg/less/layout_raster.less
@@ -385,7 +385,7 @@
     // move to bottom of the page
     position: fixed;
     z-index: 1000;
-    bottom: -8px;
+    bottom: 2px;
     right: 5px;
     padding-right: 20px;
 
@@ -431,7 +431,9 @@
     #topmenu_info_notifications {}
 
     /*user info*/
-    #topmenu_info_user_info {}
+    #topmenu_info_user_info {
+		display: inline-block;
+	}
 
     /*current user info*/
     #topmenu_info_current_users {}
